example/secondfile/objects/SPProduct__c.object
<CustomObject>
    <description>Contains the information of the products like AVPN,CaaS and StaaS</description>
    <fields>
        <fullName>ACNA__c</fullName>
        <label>ACNA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Call_per_month__c</fullName>
        <label>API Call (per month)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Flag__c</fullName>
        <formula>Deal__r.API_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_Process_Error__c</fullName>
        <label>API Process Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Process_Status__c</fullName>
        <label>API Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CDG/SubAccount API Successful</fullName>
                </value>
                <value>
                    <fullName>CDG/SubAccount API Failed</fullName>
                </value>
                <value>
                    <fullName>Circuit ID/USO API Successful</fullName>
                </value>
                <value>
                    <fullName>Circuit ID/USO API Failed</fullName>
                </value>
                <value>
                    <fullName>Encrypted Password API Successful</fullName>
                </value>
                <value>
                    <fullName>Encrypted Password API Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASE_Circuit_ID__c</fullName>
        <label>ASE Circuit ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASR_Completion_Date__c</fullName>
        <label>ASR Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASR_Processed_Date__c</fullName>
        <label>ASR Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASR_Received_Date__c</fullName>
        <label>ASR Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASR_Status__c</fullName>
        <label>ASR Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATOM_Deal__c</fullName>
        <formula>Deal__r.ATOM_Deal__c</formula>
        <label>ATOM Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AT_T_Circuit_ID__c</fullName>
        <label>AT&amp;T Circuit ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AT_T_DDOS_be_sold_with_Firewall_sol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AT&amp;T DDOS be sold with Firewall sol?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AT_T_Entrance_Facility_Offer__c</fullName>
        <label>AT&amp;T Entrance Facility Offer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVPN_Name__c</fullName>
        <description>Anira - Related AVPN Name</description>
        <label>AVPN Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Circuit_Count__c</fullName>
        <label>Access Circuit Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Delivery_Complete_Date__c</fullName>
        <label>Access Delivery Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Access_Delivery_Due_Date__c</fullName>
        <label>Access Delivery Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Access_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_Speed_List_Price__c</fullName>
        <label>Access Speed List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_Speed_Name__c</fullName>
        <label>Access Speed Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Speed_Physical_Value__c</fullName>
        <label>Access Speed Physical Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_Speed_Type__c</fullName>
        <label>Access Speed Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Vendor_LEC__c</fullName>
        <label>Access Vendor LEC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Archiving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Archiving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Directory_integration_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Directory integration required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_MiiM_Viewer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add MiiM Viewer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_DNS__c</fullName>
        <description>This field is to additional DNS to be displayed on AVPN, MIS, and PNT products.</description>
        <label>Additional DNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Options__c</fullName>
        <label>Additional Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-&lt;to do&gt;-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allocation_Pools_Extra_Large__c</fullName>
        <label>Extra Large - Allocation Pools</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocation_Pools_Large__c</fullName>
        <label>Large - Allocation Pools</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocation_Pools_Med__c</fullName>
        <label>Medium - Allocation Pools</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocation_Pools_Small__c</fullName>
        <label>Small - Allocation Pools</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_OM_Order_Manager__c</fullName>
        <label>Assigned OM (Order Manager)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Owner_Date__c</fullName>
        <label>Assigned to Owner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_Speed_Mbps__c</fullName>
        <label>Available Speed (Mbps)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avg_of_images_per_study__c</fullName>
        <label>Avg # of images per study</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avg_of_studies_per_month__c</fullName>
        <label>Avg # of studies per month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avg_size_of_image_in_MB_s__c</fullName>
        <label>Avg size of image in MB&apos;s</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAN_Number__c</fullName>
        <label>BAN Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAN__c</fullName>
        <label>BAN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BID_Product_ID__c</fullName>
        <label>BID Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_End_Cross_Connect_Coax__c</fullName>
        <label>Back-End Cross Connect Coax</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_End_Cross_Connect_Copper__c</fullName>
        <label>Back-End Cross Connect Copper</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_End_Cross_Connect_Fiber__c</fullName>
        <label>Back-End Cross Connect Fiber</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_log_feed_req_from_the_Firewall_sol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch log feed req from the Firewall sol</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_Start_Date__c</fullName>
        <label>Bill Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <formula>Deal__r.Account.Billing_Address__c &amp;BR()&amp;  
Deal__r.Account.Billing_City__c &amp;&quot;, &quot;&amp; 
Deal__r.Account.Billing_State__c &amp; &quot; &quot;&amp; 
Deal__r.Account.Billing_Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email__c</fullName>
        <formula>Billing_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Phone__c</fullName>
        <formula>Billing_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SP Products</relationshipLabel>
        <relationshipName>SP_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Block_RDS_Details__c</fullName>
        <formula>IF(OR(Deal__r.RDS_Received_Status__c=&apos;Success&apos;,TEXT(Deal__r.RDS_Deal_Hash__r.RDS_object_status__c)=&apos;Received&apos;),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Block RDS Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Build_End_Date__c</fullName>
        <label>Build End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bulk_Ingestion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk Ingestion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Competitor__c</fullName>
        <label>Business Competitor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Size__c</fullName>
        <label>Business Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Extra Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNUM_Rate_Card__c</fullName>
        <label>CNUM Rate Card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNUM_Suffix__c</fullName>
        <label>CNUM+Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNUM__c</fullName>
        <label>CNUM #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_List_Price__c</fullName>
        <label>COS List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COS_Product_Name__c</fullName>
        <label>Class of Service (CoS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS__c</fullName>
        <label>COS</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPU_Limit__c</fullName>
        <label>Small - CPU Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPU_Reserved__c</fullName>
        <label>Small - CPU Reserved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM_Order_Number__c</fullName>
        <label>CSM Order Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_Received__c</fullName>
        <label>CSR Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTA_Completed__c</fullName>
        <description>Used for Service Delivery Tracking</description>
        <label>CTA Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTA_Scheduled__c</fullName>
        <description>Used for Service Delivery Tracking</description>
        <label>CTA Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTN_User_Name__c</fullName>
        <label>CTN User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_of_Service_Type__c</fullName>
        <label>Class of Service (CoS) Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_of_Service__c</fullName>
        <label>Class of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Class of Service1</fullName>
                </value>
                <value>
                    <fullName>Class of Service 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud_ID__c</fullName>
        <label>Cloud ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This is to catch the comments for products.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Committed_Information_Rate_Price__c</fullName>
        <label>Committed Information Rate (CIR) Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Committed_Information_Rate__c</fullName>
        <label>Committed Information Rate (CIR)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed_VM_Duration__c</fullName>
        <label>Commitment Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed_VM_Model__c</fullName>
        <label>Committed VM Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-&lt;to do&gt;-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Pricing_Status__c</fullName>
        <label>Special Pricing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Special Pricing Denied</fullName>
                </value>
                <value>
                    <fullName>Special Pricing Approved</fullName>
                </value>
                <value>
                    <fullName>Special Pricing Requested</fullName>
                </value>
                <value>
                    <fullName>Special Pricing Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_Exchange_Access_Date__c</fullName>
        <label>Completed Exchange Access Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_Firm_Order_Commitment__c</fullName>
        <label>Completed Firm Order Commitment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Activation_Date_DD__c</fullName>
        <label>Completion/Activation Date (DD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complexity_Level__c</fullName>
        <label>Complexity Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concurrent_Calls__c</fullName>
        <label>Concurrent Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Config_Type__c</fullName>
        <label>Config Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractRenewal_IglooError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContractRenewal_IglooError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Flow__c</fullName>
        <formula>TEXT( Deal__r.Contract_Flow__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Flow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <label>Contract ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>CNUM Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentTier__c</fullName>
        <description>This field id for Reporting Purpose .</description>
        <formula>TEXT(Deal__r.Account.Current_Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This Field is used for Tier comparison report . DO NOT DELETE.</inlineHelpText>
        <label>Current Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Deal_Status__c</fullName>
        <formula>TEXT(Deal_Status__c)</formula>
        <label>Current Deal Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Service_Provider__c</fullName>
        <label>Current Service Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Tier__c</fullName>
        <formula>TEXT(Deal__r.Account.Current_Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Edge_Router_IP_Address_CER__c</fullName>
        <label>Cust Edge Router IP Address (CER)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Application__c</fullName>
        <label>Custom Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerSiteID__c</fullName>
        <description>This is used in RDS mapping. For identifying Spproduct  based on the site.</description>
        <label>CustomerSiteID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Not_Ready_End_Date__c</fullName>
        <label>Customer Not Ready End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Not_Ready_Start_Date__c</fullName>
        <label>Customer Not Ready Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Not_Ready_Status__c</fullName>
        <label>Customer Not Ready Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Not Ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Requested_Due_Date__c</fullName>
        <label>Customer Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Site_Identifier__c</fullName>
        <label>Customer Site Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DNS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPE_Promotions_applied_except_Deal_Reg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DPE Promotions applied (except Deal Reg)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <label>DUNS #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_A_AVPN_Data__c</fullName>
        <formula>IF( AND( RecordType.Name = &quot;AVPN&quot;, Access_Delivery_Complete_Date__c  &lt;=  Customer_Requested_Due_Date__c,  ISPICKVAL(Exchange_Access_Date_Status__c , &quot;Completed&quot;) ), 1, IF( AND( RecordType.Name = &quot;AVPN&quot;, Access_Delivery_Complete_Date__c   &gt;=   Customer_Requested_Due_Date__c,  ISPICKVAL(Exchange_Access_Date_Status__c , &quot;Completed&quot;)),2,0))</formula>
        <label>D&amp;A AVPN Data</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_A_AVPN_TDM__c</fullName>
        <formula>IF( D_A_AVPN_Data__c = 0, &quot;Not Applicable&quot;,
IF( D_A_AVPN_Data__c = 1, &quot;Met&quot;, 
IF( D_A_AVPN_Data__c = 2, &quot;Missed&quot;,null)))</formula>
        <label>D&amp;A AVPN TDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_A_MIS_Data__c</fullName>
        <formula>IF( AND(RecordType.Name = &quot;MIS&quot;, ISPICKVAL( Exchange_Access_Date_Status__c , &quot;Completed&quot;), (   Access_Delivery_Complete_Date__c -  Customer_Requested_Due_Date__c ) &gt; 14),&quot;Missed&quot;, &quot;Met&quot;)</formula>
        <label>D&amp;A MIS Data</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Center_Name__c</fullName>
        <label>Data Center Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Center_Type__c</fullName>
        <label>Data Center Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Compressed__c</fullName>
        <label>Data Compressed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_Owner__c</fullName>
        <formula>Deal__r.Date_Assigned_to_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Assigned to Owner</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DealHash__c</fullName>
        <formula>Deal__r.RDS_Deal_Hash__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DealHash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealRegNum__c</fullName>
        <formula>Deal__r.BID_ID__c</formula>
        <label>DealRegNum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealRegistrationDiscount__c</fullName>
        <formula>IF(Deal__r.ATOM_Deal__c == true || ISPICKVAL(Competitive_Pricing_Status__c, &apos;Special Pricing Approved&apos;),IF(ISBLANK(Deal_Registration_Discount__c),Deal__r.Discounted_Percentage__c,Deal_Registration_Discount__c), ((List_Price__c - Discounted_Price__c)/ List_Price__c))</formula>
        <label>Deal Registration Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deal_Account_Id__c</fullName>
        <formula>Deal__r.AccountId</formula>
        <label>Deal Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Exclusivity_Date__c</fullName>
        <label>Deal Exclusivity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Rate_Plan_ID__c</fullName>
        <formula>IF(OR(Deal__r.X3rd_Party_Flag__c == true, Deal__r.API_Flag__c  == true), Deal__r.Deal_Rate_Plan_ID__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Rate Plan ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_No__c</fullName>
        <formula>Deal__r.BID_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Reg No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Registration_Discount__c</fullName>
        <description>This field is used to calculate the Deal Registration %.</description>
        <label>Deal Registration Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deal_Stage_on_Product__c</fullName>
        <formula>text(Deal__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Stage on Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Stage_on_SP__c</fullName>
        <label>Deal Stage on SP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Status_Updation_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to control the outbound message to BID When the deal status is updated in the SPProduct.</description>
        <label>Deal Status Updation Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Status__c</fullName>
        <label>Deal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deal Registration Denied</fullName>
                </value>
                <value>
                    <fullName>Deal Registration Approved With Discount</fullName>
                </value>
                <value>
                    <fullName>Deal Registration Approved Without Discount</fullName>
                </value>
                <value>
                    <fullName>Deal Registration Requested</fullName>
                </value>
                <value>
                    <fullName>System Auto Approve with Discount</fullName>
                </value>
                <value>
                    <fullName>System Auto Approve without Discount</fullName>
                </value>
                <value>
                    <fullName>System auto denied – Named Account</fullName>
                </value>
                <value>
                    <fullName>Deal Registration Cancelled</fullName>
                </value>
                <value>
                    <fullName>Deal Reg Approved with discount</fullName>
                </value>
                <value>
                    <fullName>Deal Reg Approved without discount</fullName>
                </value>
                <value>
                    <fullName>Order Submitted</fullName>
                </value>
                <value>
                    <fullName>Pricing Schedule Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SP Products</relationshipLabel>
        <relationshipName>SPProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dedicated_Networking__c</fullName>
        <label>Dedicated Networking</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delay_Reason__c</fullName>
        <label>Delay Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Ordering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demarcation_Information__c</fullName>
        <label>Demarcation Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Installation_Date__c</fullName>
        <label>Desired Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Directory_Listing_Telephone_number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Directory Listing Telephone number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disaster_Recovery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disaster Recovery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disconnect_Type__c</fullName>
        <label>Disconnect Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SD</fullName>
                </value>
                <value>
                    <fullName>HD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <description>1. If Percentage discount method is chosen:
a.  Populate the field based on
i.  Discount Amount = List Price * (Discount Percentage) / 100
2.  If Fixed Price method is chosen:
a.  Populate the field based
i.  Discount Amount = List Price – Fixed Discounted Price</description>
        <label>Special Pricing Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Discount %</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discounted_Access_Price__c</fullName>
        <label>Discounted Access Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discounted_Amount__c</fullName>
        <formula>IF(OR(Discounted_Price__c=0, ISBLANK(Discounted_Price__c)),null, List_Price__c - Discounted_Price__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>